[package]
name = "db12-rs"
version = "0.1.0"
edition = "2024"
authors = ["DevLink42"]
description = "DIRAC Benchmark 2012 (DB12) in Rust"
license = "LGPL-3.0"
repository = "https://github.com/devlink42/DB12-refacto-rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
rand = "0.10"
rand_distr = "0.6"
rayon = "1.12"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
num_cpus = "1.17"
